--- a/css/robi.css
+++ b/css/robi.css
@@ -244,8 +244,8 @@ box-shadow: inset 2px -20px 11px -7px #FFFFFF;
 }
 
 .fontstyle{
-    font-family: 'Abril Fatface', cursive;
-    font-size: 3vw;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 2rem;
   
     letter-spacing: 2px;
    
